<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Audio Editor Kit</string>
    <string name="start_tv">Start creating</string>
    <string name="edit_draft">Clip Draft</string>
    <string name="no_draft">No draft...</string>
    <string name="version">Version:</string>
    <string name="setting">Setting</string>
    <string name="permission">The sample application requires the storage permission.</string>
    <string name="cancels">cancel</string>
    <string name="select_none_video">No video selected</string>
    <string name="extract_success">Audio extraction succeeded: %s</string>
    <string name="extract_fail">Audio extraction failed.</string>
    <string name="main_extract">Audio extraction</string>
    <string name="main_format">Format conversion</string>
    <string name="main_title">Petal Li Yin</string>
    <string name="main_draft">Draft box</string>
    <string name="main_clip">Music Clips</string>
    <string name="main_clip_text2">Import Audio Easy Editing</string>

    <string name="main_popup_window_text1">Delete</string>
    <string name="main_popup_window_text2">Rename</string>
    <string name="main_popup_window_text3">Draft Copy</string>
    <string name="main_effect">Effects</string>
    <string name="main_withdraw">Audio extraction</string>
    <string name="file_not_avable">This file is not available</string>
    <string name="dm_extract_cancel">cancel</string>
    <string name="main_separat">Vocal separation</string>
    <string name="select_none_audio">No audio selected</string>
    <string name="separat_success">Voice separation succeeded: %s</string>
    <string name="separat_fail">Voice separation failure</string>
    <string name="select_none_type">No type selected</string>
    <string name="audio_format_mp3">MP3</string>
    <string name="audio_format_wav">WAV</string>
    <string name="audio_format_m4a">M4A</string>
    <string name="audio_format_aac">AAC</string>
    <string name="audio_format_flac">FLAC</string>
    <string name="transfer_btn">Transform Encoder Format</string>
    <string name="transfer_base">Transform Base Format</string>
    <string name="format_title">Audio format conversion</string>
    <string name="transfer_samplerate">Sample Rate</string>
    <string name="transfer_bitrate">Bit Rate</string>
    <string name="transfer_channel">Channels</string>
    <string name="transfer_format">Format</string>
    <string name="save_path">Saved to %s.</string>
    <string name="tranfer_error_nopath">Path Not Exit</string>

    <string name="main_change_sound">Streaming interface</string>
    <string name="flow_api_title">Flow interface</string>
    <string name="change_sound_title">Change sound</string>
    <string name="sound_uncle">Seasoned</string>
    <string name="sound_lori">Cute</string>
    <string name="sound_female">Female</string>
    <string name="sound_male">Male</string>
    <string name="sound_monsters">Monster</string>
    <string name="begin_change">Start Voice FX</string>
    <string name="sound_trill">Trill</string>
    <string name="sound_normal">Normal</string>
    <string name="begin_change_common">Start Voice FX(common)</string>
    <string name="pcm_file_not_exists">PCM file does not exist</string>
    <string name="change_sound_pcm_path">Please enter the path of the pcm file</string>
    <string name="begin_reduction">Start noise reduction</string>
    <string name="begin_play">Play original sound</string>
    <string name="begin_env">Start Scene</string>
    <string name="begin_sound_ground">Start sound field</string>
    <string name="begin_eq">Start Equilibration</string>
    <string name="file_api_title">File interface</string>
    <string name="begin_choice_file">Select Audio File</string>
    <string name="in_progress">Ongoing</string>
    <string name="begin_speed_pitch">Start Tempo/Pitch</string>
    <string name="begin_space_render">Start Orientation</string>
    <string name="begin_text_to_audio">Start conversion</string>
    <string name="queuing_mode">Queuing Mode</string>
    <string name="clear_mode">Clear Mode</string>
    <string name="back">back</string>
    <string name="dubbing_s">Text to speech</string>
    <string name="intro">text to speak</string>
    <string name="language">Language:</string>
    <string name="style">Style:</string>
    <string name="mode">Play Mode:</string>
    <string name="volume_demo">Volume:</string>
    <string name="speech_rate">Speech Rate:</string>
    <string name="queue_add">Start synthesis</string>
    <string name="play">Play Result</string>
    <string name="release_dubbing">stop</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="asr_mark">* This service is only available for Huawei mobile phones</string>
    <string name="chinese">Chinese</string>
    <string name="simplified_chinese">Simplified Chinese</string>
    <string name="english_choose">English</string>
    <string name="french">French</string>
    <string name="Italian">Italian</string>
    <string name="German">German</string>
    <string name="spanish">Spanish</string>
    <string name="male_zh">Chinese male voice</string>
    <string name="male_en_eagle">English male voice - eagle</string>
    <string name="female_en_eagle">English female voice-eagle</string>
    <string name="male_en">English male voice</string>
    <string name="female_fr">French female voice</string>
    <string name="female_es">Spanish female voice</string>
    <string name="female_en">English female voice</string>
    <string name="female_zh">Chinese female voice</string>
    <string name="female_de">German female voice</string>
    <string name="female_it">Italian female voice</string>
    <string name="init_progress">50%</string>
    <string name="nonetwork">The network is not connected.</string>
    <string name="speak_abnormal">Language and Pronunciation Mismatch</string>
    <string name="abnormal">The service is abnormal.</string>
    <string name="replay">Retry</string>
    <string name="str_ok">determine</string>
    <string name="please_enter_text">Please enter the text ~</string>
    <string name="text_to_audio">AI dubbing</string>
    <string name="queue_add_center">Synthesis</string>
    <string name="text_to_speech_previewing" priority="translator">Previewing. Please try again after the preview is complete.</string>
    <string name="edit_dialog_title">Please enter a name.</string>
    <string name="file_exists">The file already exists. Please enter a new file name.</string>
    <string name="material_tag">Materials</string>
    <string name="material_play">play</string>
    <string name="passages">passages</string>
    <string name="space_render">Space Render</string>
    <string name="render_front_desc">Front</string>
    <string name="render_top_desc">Top</string>
    <string name="fixed_positioning">Fixed Positioning</string>
    <string name="dynamic_rendering">Dynamic Rendering</string>
    <string name="dynamic_extended">Extended</string>
    <string name="extended_bj">Extension Radius</string>
    <string name="extended_jd">Extended Angle</string>
    <string name="start_rendering">Start Rendering</string>
    <string name="surround_time">single-cycle surround time</string>
    <string name="not_select_type">No Render Type Selected</string>
    <string name="change_voice_man">Male</string>
    <string name="change_voice_woman">Female</string>
    <string name="voice_high">High</string>
    <string name="voice_center">Middle</string>
    <string name="voice_low">Low</string>
    <string name="fundamental_frequency">fundamental frequency</string>
    <string name="voice_tones">tones</string>
    <string name="voice_formants">formants</string>
    <string name="rb_clockwise">clockwise</string>
    <string name="rb_counterclockwise">Counterclockwise</string>
    <string name="no_write_permission">no file permission</string>
    <string name="local_separation">"Voice separation (device-side version)"</string>
    <string name="cloud_separation">"Voice separation (cloud-side version)"</string>
    <string name="cloud_separation_sync">"Voice separation async (cloud-side version)"</string>
    <string name="title_audio_base">Basic Functions</string>
    <string name="begin_import_file">Import</string>
    <string name="base_export">Export</string>
    <string name="get_wave_data">Obtaining Waveform Data</string>
    <string name="asset_splits">Splits</string>
    <string name="asset_del">DELETE</string>
    <string name="asset_splits1">Splits\n（The example is split half）</string>
    <string name="audio_play">Play</string>
    <string name="audio_stop">Paused</string>
    <string name="audio_resume_play">Resume playback</string>
    <string name="asset_volume">volume</string>
    <string name="asset_speed_pitch">sonic pitch</string>
    <string name="asset_speed">speed</string>
    <string name="asset_pitch">pitch</string>
    <string name="asset_fade_in">fade in</string>
    <string name="asset_fade_out">fade out</string>
    <string name="asset_fade">Fade in and out</string>
    <string name="get_wave_data_tip">Obtain waveform data\n (default original audio, display data length):</string>
    <string name="delete_tip">Delete\n(Example deletes the first audio)</string>
    <string name="play_delay">Play the file after the export is complete.</string>

    <string name="start_download_model">Start to initialize the model.</string>
    <string name="success_download_model">The model is initialized successfully.</string>
    <string name="err_download_model">Failed to initialize the model.Error Code : %s</string>
    <string name="title_progress">Progress</string>
    <string name="error_1007">Model download failed.</string>
    <string name="sound_robots">Robots</string>
    <string name="sound_cartoon">Cartoon</string>
    <string name="no_delete_audio">No audio can be deleted.</string>
    <string name="wait_for_wave">Waiting for Waveform Buffer</string>
    <string name="input_name_hint">Please enter a name.</string>
    <string name="select_lan" priority="translator">Please select a language.</string>
    <string name="select_style" priority="translator">Please select a style.</string>
    <string name="text_complete">complete</string>
    <string name="beautifer_clear">Clear</string>
    <string name="beautifer_theatre">Theatre</string>
    <string name="beautifer_cd">CD</string>
    <string name="beautifer_studio">Studio</string>
    <string name="beautifer_btn">Start Voice Beautifier</string>
    <string name="audio_clip_title">Audio Editor</string>
    <string name="singing_compose" priority="translator">Song Compose</string>
    <string name="singing_compose_start" priority="translator">Start Song Compose</string>
    <string name="sing_compose_type" priority="translator">Synthetic Type</string>
    <string name="sing_compose_type_preset" priority="translator">Preset Template Combination</string>
    <string name="sing_compose_type_xml" priority="translator">Composition of lyrics in XML format</string>
    <string name="sing_timbre" priority="translator">Timbre</string>
    <string name="sing_timbre_lyric_female" priority="translator">Lyric Pop Female</string>
    <string name="sing_timbre_national_female" priority="translator">National Female</string>
    <string name="sing_timbre_folk_male" priority="translator">Folk Male</string>
    <string name="song_name" priority="translator">Song Name</string>
    <string name="song_name1" priority="translator">一起嗨</string>
    <string name="song_name2" priority="translator">追梦路上</string>
    <string name="song_name3" priority="translator">水中月</string>
    <string name="song_lyrics" priority="translator">Input Lyrics</string>
    <string name="song_lyrics_null" priority="translator">"Lyrics is null, please input lyrics"</string>
</resources>
