<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/rg_sound_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <RadioButton
            android:id="@+id/rb_man"
            style="@style/style_api_rb"
            android:text="@string/change_voice_man"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rb_woman"
            style="@style/style_api_rb"
            android:text="@string/change_voice_woman"/>
    </RadioGroup>
    <RadioGroup
        android:visibility="gone"
        android:id="@+id/rg_sound_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <RadioButton
            android:id="@+id/rb_center"
            style="@style/style_api_rb"
            android:text="@string/voice_center"/>

    </RadioGroup>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioGroup
            android:id="@+id/rg_sound_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <RadioButton
                android:id="@+id/rb_uncle"
                style="@style/style_api_rb"
                android:text="@string/sound_uncle"
                android:checked="true" />

            <RadioButton
                android:id="@+id/rb_lori"
                style="@style/style_api_rb"
                android:text="@string/sound_lori"/>

            <RadioButton
                android:id="@+id/rb_female"
                style="@style/style_api_rb"
                android:text="@string/sound_female"/>

            <RadioButton
                android:id="@+id/rb_male"
                style="@style/style_api_rb"
                android:text="@string/sound_male"/>

            <RadioButton
                android:id="@+id/rb_monsters"
                style="@style/style_api_rb"
                android:text="@string/sound_monsters"/>

            <RadioButton
                android:id="@+id/rb_robots"
                style="@style/style_api_rb"
                android:text="@string/sound_robots"/>

            <RadioButton
                android:id="@+id/rb_cartoon"
                style="@style/style_api_rb"
                android:text="@string/sound_cartoon"/>

        </RadioGroup>

    </HorizontalScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dp_60"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/audio_background_ai_type"
        app:layout_constraintTop_toBottomOf="@+id/rl_type"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8">
            <TextView
                android:id="@+id/tv_name_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_centerVertical="true"
                android:textSize="@dimen/dp_16"
                android:text="@string/voice_tones"/>
            <TextView
                android:id="@+id/tv_value_1"
                android:layout_width="@dimen/dp_30"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/white"
                android:gravity="end"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_16" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/sb_tones"
            style="@style/SeekBarStyleAudioExport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_12"
            android:progressBackgroundTint="@color/seekbar_bg_color"
            android:progressTint="@color/import_button_search"
            android:layout_marginBottom="@dimen/dp_16"
            android:progress="0"
            android:textSize="@dimen/dp_16" />

    </LinearLayout>
    <Button
        android:id="@+id/begin_change"
        style="@style/style_api_btn"
        android:text="@string/begin_change"/>
</LinearLayout>