<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_156"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_12"
    android:paddingBottom="@dimen/dp_12"
    android:background="@drawable/bg_main_popup_window">

    <TextView
        android:id="@+id/delete_home_popup_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:drawablePadding="@dimen/dp_4"
        android:fontFamily="HWtext"
        android:gravity="center"
        android:text="@string/main_popup_window_text1"
        android:textColor="@color/main_menu_item"
        android:textSize="@dimen/dp_16"
        app:drawableLeftCompat="@drawable/icon_popup_window_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rename_home_popup_window"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/rename_home_popup_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:drawablePadding="@dimen/dp_4"
        android:fontFamily="HWtext"
        android:gravity="center"
        android:text="@string/main_popup_window_text2"
        android:textColor="@color/main_menu_item"
        android:textSize="@dimen/dp_16"
        app:drawableLeftCompat="@drawable/icon_popup_window_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/copy_home_popup_window"
        app:layout_constraintStart_toEndOf="@+id/delete_home_popup_window"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/copy_home_popup_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_8"
        android:drawablePadding="@dimen/dp_4"
        android:fontFamily="HWtext"
        android:gravity="center"
        android:text="@string/main_popup_window_text3"
        android:textColor="@color/main_menu_item"
        android:textSize="@dimen/dp_16"
        app:drawableLeftCompat="@drawable/icon_popup_window_copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rename_home_popup_window"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

</LinearLayout>