<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pic_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_30"
        android:text="@string/audio_clip_title"
        android:fontFamily="HarmonyHeiTi"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <LinearLayout
        android:id="@+id/clip_main"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_132"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/bg_main_clip"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pic_main">

        <ImageView
            android:id="@+id/image_clip_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/icon_home_clip"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_36"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="HarmonyHeiTi"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/main_clip"
                android:textColor="#FFFFFFFF"
                android:textSize="@dimen/dp_20"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:fontFamily="HarmonyHeiTi"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/main_clip_text2"
                android:textColor="#FFFFFFFF"
                android:textSize="@dimen/dp_14"
                tools:ignore="SpUsage" />

        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/ll_menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:minHeight="@dimen/dp_60"
        android:background="@drawable/bg_home_menu"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_4"
        app:layout_constraintTop_toBottomOf="@+id/clip_main">
        <com.huawei.hms.audioeditor.demo.recycle.PageRecyclerView
            android:id="@+id/recycle_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <com.huawei.hms.audioeditor.demo.recycle.PageIndicatorView
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"/>
    </RelativeLayout>


    <TextView
        android:visibility="gone"
        android:id="@+id/draft_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:fontFamily="HWtext"
        android:gravity="start|center_vertical"
        android:text="@string/main_draft"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/dp_17"
        android:layout_marginStart="@dimen/dp_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_menu"
        tools:ignore="SpUsage" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_main"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_20"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/draft_main" />


</androidx.constraintlayout.widget.ConstraintLayout>